# risk-dashboard

./: .gitignore  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  api-docs.md  app.py  architecture.md  config.py  dashboard.py  db_docs.md  env.example  example.py  pyproject.toml  requirements.txt  test_api.py
abis/: VaultManager.json
data/: gov-updates.json
gov-set-notis/: README.md  __init__.py  config.py  event_processor.py  logging_config.py  main.py  notifier.py  state_manager.py  vault_collector.py
pages/: block_snapshot.py  collateral_vault_detail.py  collateral_vaults.py  evault_detail.py  evaults.py  home.py  liquidations.py
src/: __init__.py
src/api/: __init__.py  block_snapshot_client.py  client.py  models.py
src/assets/: style.css
src/components/: __init__.py  cards.py  charts.py  layouts.py  loading.py  sections.py  tables.py
src/utils/: __init__.py  block_snapshot.py  evault_data.py  formatters.py  health_factor.py  logging_utils.py  pricing.py  usd_calculations.py
